<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <ImageView android:id="@+id/mainLogo" 
    			android:layout_width="match_parent" 
    			android:src="@drawable/logo" 
    			android:layout_gravity="top" 
    			android:layout_weight="1" 
    			android:layout_height="fill_parent"
    			android:scaleType="fitCenter">
	</ImageView>
    			        
    <Button android:layout_width="match_parent" 
    		android:text="@string/loadRomButtonLabel" 
    		android:id="@+id/buttonLoadRom" 
    		android:layout_weight="0" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="20dip"
    		android:layout_marginRight="20dip"
    		android:layout_marginTop="4dip"
    		android:layout_marginBottom="4dip"
    		android:background="@drawable/custom_button"
    		android:typeface="monospace"
    		android:textSize="15sp"
    		android:textStyle="bold"></Button>
    		
    <Button android:layout_width="match_parent" 
    		android:text="@string/resumeButtonLabel" 
    		android:id="@+id/buttonResume" 
    		android:layout_weight="0" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="20dip"
    		android:layout_marginRight="20dip"
    		android:layout_marginTop="4dip"
    		android:layout_marginBottom="4dip"
    		android:background="@drawable/custom_button"
    		android:typeface="monospace"
    		android:textSize="15sp"
    		android:textStyle="bold"
    		android:layout_below="@+id/buttonLoadRom"></Button>
    		
    <Button android:layout_width="match_parent" 
    		android:text="@string/settingButtonLabel" 
    		android:id="@+id/buttonSettings" 
    		android:layout_weight="0" 
    		android:layout_height="wrap_content"    		
    		android:layout_marginLeft="20dip"
    		android:layout_marginRight="20dip"
    		android:layout_marginTop="4dip"
    		android:layout_marginBottom="4dip"
    		android:background="@drawable/custom_button"
    		android:typeface="monospace"
    		android:textStyle="bold"
    		android:textSize="15sp"
    		android:layout_below="@+id/buttonResume"></Button>    

    <Button android:layout_width="match_parent" 
    		android:id="@+id/buttonAbout" 
    		android:text="@string/aboutButtonLabel" 
    		android:layout_weight="0" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="20dip"
    		android:layout_marginRight="20dip"
    		android:layout_marginTop="4dip"
    		android:layout_marginBottom="4dip"
    		android:background="@drawable/custom_button"
    		android:typeface="monospace"
    		android:textStyle="bold"
    		android:textSize="15sp"
    		android:layout_below="@+id/buttonSettings"></Button>    
    		
    <Button android:layout_width="match_parent" 
    		android:id="@+id/buttonExit" 
    		android:text="@string/exitButtonLabel" 
    		android:layout_weight="0" 
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="20dip"
    		android:layout_marginRight="20dip"
    		android:layout_marginTop="4dip"
    		android:layout_marginBottom="4dip"
    		android:background="@drawable/custom_button"
    		android:typeface="monospace"
    		android:textStyle="bold"
    		android:textSize="15sp"
    		android:layout_below="@+id/buttonAbout"></Button>        
</RelativeLayout>
